// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup: should combine className when passed in 1`] = `
<div
  className="combineMe group"
>
  <Button
    aria-pressed={false}
    className=""
    color="callToAction"
    component="button"
    role="button"
    tabindex={0}
  >
    <h5>
      SEEK
    </h5>
  </Button>
</div>
`;

exports[`ButtonGroup: should render a button group with node 1`] = `
<div
  className="group"
>
  <Button
    aria-pressed={false}
    className=""
    color="callToAction"
    component="button"
    role="button"
    tabindex={0}
  >
    <h5>
      SEEK
    </h5>
  </Button>
</div>
`;
